--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,39 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ESP32-C3 Gate Control System</title>
+    <title>Person Detection Gate Control</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="camera_styles.css">
-    <!-- MQTT.js từ CDN - Kết nối trực tiếp tới EMQX -->
-    <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
 </head>
 
 <body>
-    <h1>ESP32-C3 Gate Control Dashboard</h1>
+    <h1>🚪 Person Detection Gate System</h1>
 
     <div class="container">
         <!-- Camera Stream -->
         <div class="camera-section">
-            <h2>📷 AI License Plate Detection</h2>
-            <img id="stream" src="http://localhost:5000/video_feed" alt="AI Webcam Stream">
+            <h2>📷 AI Person Detection</h2>
+            <img id="stream" src="http://localhost:8000/video_feed" alt="AI Webcam Stream">
             <div class="camera-status">
                 <span id="camera-status-text">🟢 AI Camera: Active</span>
-                <span id="mqtt-status-text">🔴 MQTT: Disconnected</span>
+                <span id="detection-status-text">⚪ Chờ phát hiện...</span>
             </div>
         </div>
 
-        <!-- Live Vehicle Logs -->
+        <!-- Live Detection Logs -->
         <div class="csv-section">
-            <h2>📊 Live Vehicle Logs</h2>
+            <h2>📊 Detection Logs</h2>
 
-            <!-- Khu vực nhập biển số thủ công -->
-            <div class="plate-input-section">
-                <input type="text" id="manual-plate" placeholder="Nhập biển số xe (VD: 59A-123.45)">
-                <button class="btn-send-plate" onclick="sendManualPlate()">
-                    🚀 Gửi Biển Số
-                </button>
+            <div class="button-group">
                 <button class="btn-export-csv" onclick="exportLogsToCSV()">
                     📥 Export CSV
+                </button>
+                <button class="btn-refresh" onclick="fetchLogs(); fetchDetections();">
+                    🔄 Refresh
                 </button>
             </div>
 
@@ -45,7 +40,7 @@
                     <thead>
                         <tr>
                             <th>Timestamp</th>
-                            <th>Event/State</th>
+                            <th>Event</th>
                             <th>Description</th>
                         </tr>
                     </thead>
@@ -63,27 +58,27 @@
             <h2>🚧 Gate Control</h2>
 
             <div class="gate-control-grid">
-                <!-- LEFT COLUMN: Gate Visual + Buttons -->
+                <!-- Gate Visual + Button -->
                 <div class="gate-visual-column">
                     <div class="gate-wrapper-new">
-                        <!-- 70% - Khu vực barie -->
+                        <!-- Light Bulb Indicator -->
+                        <div class="light-bulb-container">
+                            <div class="light-bulb" id="light-bulb">💡</div>
+                            <span id="countdown-text"></span>
+                        </div>
+
+                        <!-- Gate Visual Area -->
                         <div class="gate-visual-area">
-                            <div class="gate-label-new out">OUT</div>
                             <div class="gate-label-new in">IN</div>
 
                             <div class="gate-visual-new">
                                 <div class="center-pole-new"></div>
-                                <div class="barrier-new out" id="barrier-out"></div>
                                 <div class="barrier-new in" id="barrier-in"></div>
                             </div>
                         </div>
 
-                        <!-- 2 nút dọc - IN trước, OUT sau -->
+                        <!-- Single Gate Button -->
                         <div class="gate-buttons-area">
-                            <button class="gate-btn-vertical" id="btn-out" onclick="toggleGateOUT()">
-                                <span id="btn-out-text">GATE OUT</span>
-                                <small id="btn-out-state">CLOSE</small>
-                            </button>
                             <button class="gate-btn-vertical" id="btn-in" onclick="toggleGateIN()">
                                 <span id="btn-in-text">GATE IN</span>
                                 <small id="btn-in-state">CLOSE</small>
@@ -92,22 +87,22 @@
                     </div>
                 </div>
 
-                <!-- RIGHT COLUMN: Vehicles in Parking -->
+                <!-- Recent Detections -->
                 <div class="vehicles-column">
                     <div class="vehicles-parking-section">
-                        <h3 class="realtime-heading">🚗Realtime</h3>
+                        <h3 class="realtime-heading">👤 Recent Detections</h3>
                         <div class="table-container realtime-table-container">
-                            <table id="vehicles-table">
+                            <table id="detections-table">
                                 <thead>
                                     <tr>
-                                        <th>Plate</th>
+                                        <th>Person</th>
                                         <th>Time</th>
-                                        <th>Duration</th>
+                                        <th>Confidence</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td colspan="3" class="table-empty">No vehicles</td>
+                                        <td colspan="3" class="table-empty">No detections</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -118,7 +113,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
